test/bad/generics/type04.px

func f<A,B>(x: A, y: B): A def
    return x * y

f(4, [4.2])
